--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "prettier": "@ubermanu/prettier-config",
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@types/node": "^24.0.15",
     "@ubermanu/prettier-config": "^3.4.1",
     "husky": "^9.1.7",
