--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,4 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
-  "extends": [
-    "@ubermanu/biome-config/biome.json"
-  ]
+  "extends": ["@ubermanu/biome-config/biome.json"]
 }
