--- a/package.json
+++ b/package.json
@@ -18,19 +18,29 @@
     "build": "tsc && vite build",
     "format": "biome format --write",
     "prepare": "husky",
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "dev": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
-    "*.{js,ts,md,css,html,json}": "biome check --write",
+    "*.{js,ts,md,css,html,json,jsonc}": "biome check --write",
     "*.{js,ts}": "vitest related --run"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
     "@changesets/cli": "^2.29.5",
+    "@storybook/addon-a11y": "^9.0.17",
+    "@storybook/addon-docs": "^9.0.17",
+    "@storybook/addon-vitest": "^9.0.17",
+    "@storybook/html-vite": "^9.0.17",
+    "@testing-library/dom": "^10.4.0",
     "@types/node": "^24.0.15",
     "@ubermanu/biome-config": "^0.1.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
+    "playwright": "^1.54.1",
+    "storybook": "^9.0.17",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4",
