--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/addon-vitest": "^9.0.17",
     "@storybook/html-vite": "^9.0.17",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.0.15",
     "@ubermanu/biome-config": "^0.1.0",
     "husky": "^9.1.7",
