--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "tsc && tsup",
     "format": "biome format --write",
     "prepare": "husky",
     "test": "vitest --run",
@@ -29,9 +29,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
     "@changesets/cli": "^2.29.5",
-    "@storybook/addon-a11y": "^9.0.17",
     "@storybook/addon-docs": "^9.0.17",
-    "@storybook/addon-vitest": "^9.0.17",
     "@storybook/html-vite": "^9.0.17",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.6.1",
@@ -40,11 +38,9 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
-    "playwright": "^1.54.1",
     "storybook": "^9.0.17",
+    "tsup": "^8.5.0",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4",
-    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   }
 }
