--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,4 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
-  "extends": ["@ubermanu/biome-config/biome.json"]
+  "extends": ["@ubermanu/biome-config/biome.json"],
+  "files": {
+    "ignoreUnknown": true
+  }
 }
